commit v1.3.0