@@ -2,9 +2,9 @@ package com.spartan.dc.core.util.common;
 
 import com.spartan.dc.core.enums.IconPrefixEnum;
 import org.springframework.web.multipart.MultipartFile;
-import sun.misc.BASE64Encoder;
 
 import java.io.IOException;
+import java.util.Base64;
 
 /**
  * @ClassName FileCode
@@ -18,7 +18,7 @@ public class FileCode {
         String base64EncoderImg = "";
         try {
             imageBytes = file.getBytes();
-            BASE64Encoder base64Encoder = new BASE64Encoder();
+            Base64.Encoder base64Encoder = Base64.getEncoder();
             base64EncoderImg = IconPrefixEnum.getEnumByCode(file.getOriginalFilename().substring(file.getOriginalFilename().lastIndexOf("."))).getName() + base64Encoder.encode(imageBytes);
             base64EncoderImg = base64EncoderImg.replaceAll("[\\s*\t\n\r]", "");
         } catch (IOException e) {
